fixed layout bugs

--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -7,10 +7,11 @@
 }
 
 @font-face {
-    font-family: Inter;
+    font-family: Inter-Variable;
     src: 
-    local('Inter')
-    url(../fonts/Inter-Variable.woff2) format('woff2 supports variations')
+    local('Inter-Variable')
+    url(../fonts/Inter-Variable.woff2) format('woff2 supports variation')
     url(../fonts/Inter-Variable.woff2) format('woff2-variations');
     font-weight: 400 785;
+    font-display: swap;
 }
