--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,6 +1,6 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
 :root {
-  --main-font-family: Inter;
+  --main-font-family: Inter-Variable;
   --accent-font-family: PressStart2P;
   --card-title-weight: 700;
   --card-text-weight: 400;
